--- a/kafka-python-camera-stream-publisher/Dockerfile
+++ b/kafka-python-camera-stream-publisher/Dockerfile
@@ -14,6 +14,6 @@ RUN apt-get update
 RUN apt-get install ffmpeg libsm6 libxext6  -y
 
 
-ADD parser.py /
+ADD publisher.py /
 CMD ["python3", "publisher.py"]
 
